# cheminfo-in-marimo

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
plans/: lexical-mapping-trinket.md
