[project]
name = "cheminfo-in-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.20.1",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=3.0.1",
    "pyarrow",
    "rdkit>=2025.9.5",
    "scikit-learn",
]
